--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(${PROJECT_NAME}
   Includes/renderer.cpp
   Includes/findXBE.cpp
   Includes/font.cpp
+  Includes/ftpserver.cpp
   )
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
