menu: Add install option Partitions and Formats the HDD and installs NevolutionX to C

--- a/sampleconfig.json
+++ b/sampleconfig.json
@@ -41,6 +41,10 @@
             "type": "reboot"
         },
         {
+            "label": "Install",
+            "type": "install"
+        },
+        {
             "label": "Some stupid submenu",
             "type": "submenu"
         }
