installer: Add path to installer json item Fixes boot, but shouldn't be there?!

--- a/sampleconfig.json
+++ b/sampleconfig.json
@@ -37,12 +37,13 @@
             "type": "settings"
         },
         {
-            "label": "Reboot",
-            "type": "reboot"
+            "label": "Install",
+            "type": "install",
+            "path": "This shouldn't have to be here!"
         },
         {
-            "label": "Install",
-            "type": "install"
+            "label": "Reboot",
+            "type": "reboot"
         },
         {
             "label": "Some stupid submenu",
